src/test/ui/const_evaluatable/needs_where_clause.stderr
error: unconstrained generic constant
  --> $DIR/needs_where_clause.rs:11:6
   |
LL |   b: [f32; complex_maths::<T>(N)],
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try adding a `where` bound using this expression: `where [u8; complex_maths::<T>(N)]: Sized`
  --> $DIR/needs_where_clause.rs:11:12
   |
LL |   b: [f32; complex_maths::<T>(N)],
   |            ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

